# 4-sem

./: .gitignore
aisd/1Lab/: DoubleLinkedCircluarList  DoubleLinkedCircluarList.c  FIFO  FIFO.c  LIFO  LinkedList  LinkedList.c
aisd/261742/: lista1.cast
crypto/1cw/: RSA_crt.jl  RSA_normal.jl  zad2_a.jl  zad3_a.jl  zad3_b.jl
crypto/2cw/: hw.jl
crypto/3cw/: chacha20.py  output.txt
crypto/5cw/: README.txt  ke5.gpg
crypto/7cw/: results.txt  results1.txt  zad1.py
crypto/8cw/: blake2b512.txt  blake2s256.txt  md5.txt  name.txt  result.txt  sha1.txt  sha256.txt  sha512.txt
kkd/1lab/: Zad1.cpp  entropia
kkd/2lab/: Huffman.cpp  HuffmanDecode.cpp  decode  huff
kkd/6lab/: planakcji
kkd/TGA/: CMakeLists.txt  decoder.cc  main.cpp  tga.cc
kkd/hamming/: BitReader.cc  BitWriter.cc  CMakeLists.txt  bit_operations.cc  check.cc  decode.cc  hamming.cc  main.cpp  noise.cc
kkd/hamming/include/: BitReader.hpp  BitWriter.hpp  bit_operations.hpp  hamming.hpp
kkd/lzw/: BitReader.cc  BitWriter.cc  CMakeLists.txt  IntCoding.cc  IntDecoding.cc  d_wabba.txt  decodeLZW.cc  encodeLZW.cpp  output.txt  test.sh  tester.cc  wabba.txt  wabba.txt.smoll
kkd/lzw/inc/: BitReader.hpp  BitWriter.hpp  IntCoding.hpp  IntDecoding.hpp
kkd/lzw/tests/: encode  pan-tadeusz-czyli-ostatni-zajazd-na-litwie.txt.smoll  test.sh  test1.bin.smoll  test2.bin.smoll  test3.bin.smoll
kkd/vecQuant/: CMakeLists.txt  bandCoding.cpp  main.cpp  out.tga  out1.tga  output.tga  vecQuant  vecQuantlib.cpp
ts/lab2/: pom.xml
ts/lab3/: data.txt  decoded.txt  encoded.txt
ts/server/: main.py
(+742 files in other folders)
